tests/scripts/type_errors/invalid_field_access.roto
function foo() {
	let b = String.foo;
}
